refactor: simplify JSON value type detection and update ignored packages